--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
 }
 body {
   margin: 0;
+  padding: 0;
+
   font-family: "Pretendard-Regular";
   h1 p {
     /* font-family: "PyeongChang-Bold"; */
